--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,26 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-.anchor
-.DS_Store
-target
-**/*.rs.bk
 node_modules
-test-ledger
-.yarn
-Cargo.lock
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+target
